hphp/test/zend/good/errmsg_037.php.exp
HipHop Fatal error: Properties cannot be declared abstract in hphp/test/zend/good/errmsg_037.php on line 4
